<?xml version="1.0"?>
<package>
  <name>gtest_ros_example</name>
  <version>0.0.1</version>
  <description>The gtest_ros_example package</description>
  <maintainer email="tkorthals@cit-ec.uni-bielefeld.de">ysong</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
